<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="go_back">Назад</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="switch_theme">Переключить тему</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">Курс по Андроид-разработке в Практикуме: </string>
    <string name="activity_placeholder">Activity placeholder</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">dimdok2010@yandex.ru</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_practicum_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="clear">clear</string>
    <string name="cover_image">cover image</string>
    <string name="connection_error_text">Проблемы со связью \n \n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="data_not_found">Ничего не нашлось</string>
    <string name="search_history">История поиска</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="collection_label">Альбом</string>
    <string name="release_date_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="track_time_label">Длительность</string>
</resources>