<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/typography"
    tools:context=".MainActivity">

    <TextView
        style="@style/header"
        android:text="@string/app_name" />

    <LinearLayout style="@style/main_page_container">

        <Button
            android:id="@+id/searchButton"
            style="@style/big_button"
            android:text="@string/search"
            app:icon="@drawable/ic_search_24" />

        <Button
            android:id="@+id/libraryButton"
            style="@style/big_button"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media_library" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/big_button"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>
</LinearLayout>
