<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioPlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/typography"
    tools:context=".AudioPlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/cover"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/buttonSave"
        style="@style/grey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_button"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="@id/buttonPlay" />

    <ImageButton
        android:id="@+id/buttonPlay"
        style="@style/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_main_gap"
        app:layout_constraintEnd_toStartOf="@id/buttonLike"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <ImageButton
        android:id="@+id/buttonLike"
        style="@style/grey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like_button"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlay"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/buttonPlay" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collectionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="collectionLabel, collectionName" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/buttonPlay"
        tools:text="00:00" />

    <!--  Длительность  -->
    <TextView
        android:id="@+id/trackTimeLabel"
        style="@style/track_data_label"
        android:text="@string/track_time_label"
        app:layout_constraintBottom_toTopOf="@id/collectionLabel"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        tools:text="Длительность" />

    <TextView
        android:id="@+id/trackTime"
        style="@style/track_data_value"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/trackTimeLabel"
        tools:text="5:35" />

    <!--  Альбом  -->
    <TextView
        android:id="@+id/collectionLabel"
        style="@style/track_data_label"
        android:text="@string/collection_label"
        app:layout_constraintBottom_toTopOf="@id/releaseDateLabel"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/track_data_value"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/collectionLabel"
        tools:text="Yesterday (Remastered 2009)" />

    <!--  Год  -->
    <TextView
        android:id="@+id/releaseDateLabel"
        style="@style/track_data_label"
        android:text="@string/release_date_label"
        app:layout_constraintBottom_toTopOf="@id/genreLabel"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

    <TextView
        android:id="@+id/releaseDate"
        style="@style/track_data_value"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/releaseDateLabel"
        tools:text="1965" />

    <!--  Жанр  -->
    <TextView
        android:id="@+id/genreLabel"
        style="@style/track_data_label"
        android:text="@string/genre_label"
        app:layout_constraintBottom_toTopOf="@id/countryLabel"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

    <TextView
        android:id="@+id/genre"
        style="@style/track_data_value"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/genreLabel"
        tools:text="Rock" />

    <!--  Страна  -->
    <TextView
        android:id="@+id/countryLabel"
        style="@style/track_data_label"
        android:text="@string/country_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftGuide" />

    <TextView
        android:id="@+id/country"
        style="@style/track_data_value"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toTopOf="@id/countryLabel"
        tools:text="Великобритания" />
</androidx.constraintlayout.widget.ConstraintLayout>